--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,20 +1,42 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'src/styles/variables';
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+:root {
   box-sizing: border-box;
+}
+
+body {
+  background-color: $gray-5;
+  margin: 0px;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: bottom;
+}
+
+.clearfix {
+  &::after {
+    content: "";
+    display: block;
+    clear: both;
+  }
+}
+
+*:focus {
+  outline: dotted $gray-3 1px;
+}
+
+.v-btn:not(.v-btn--round).v-size--default {
+  height: unset !important;
+  min-width: 64px;
+  padding: 8px 16px !important;
+}
+
+.StaticInfo-Button {
+  width: 100%;
+}
+
+.v-btn__content {
+  max-width: 100%;
 }
